.graveyard/control/tests/it/snapshots/it__accounts__create_test.snap
---
source: crates/control/tests/it/accounts.rs
assertion_line: 38
expression: redactor.response_json(response).await.unwrap()

---
{
  "data": {
    "attributes": {
      "created_at": "[datetime]",
      "display_name": "Bruce Wayne",
      "email": "batman@batcave.test",
      "id": "[a1]",
      "name": "batman",
      "unique_name": "batman",
      "updated_at": "[datetime]"
    },
    "id": "[a1]",
    "links": {
      "self": "http://127.0.0.1:0/accounts/[a1]"
    },
    "type": "account"
  }
}
